// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <Redirect
    to="/InvalidId"
  />
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Group: 
      <span />
    </h1>
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.35
      </span>
       
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create/undefined"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpenseSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <Redirect
    to="/InvalidId"
  />
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Group: 
      <span />
    </h1>
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        21
      </span>
       
      expenses
       totalling 
      <span>
        $21,222,122.11
      </span>
       
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create/undefined"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
